# pane

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs  install-desktop.out  j_control.ser  j_qemusmp8.ser  m_skylake.ser  tauri.conf.json  vnc_ws.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
capabilities/: default.json
docs/: clean-machine-validation.md  cli-reference.md  doc.html  docs.js  index.html  main.js  mvp-arch.md  native-runtime-architecture.md  phase-1-audit.md  phase-1-brief.md  product-contract.md  style.css  vision.md  vmm-foundation.md
scripts/: certify-fresh-machine.ps1  generate_pane_icon.py  package.ps1  validate-package.ps1  write-native-boot-set-manifest.ps1
scripts/package-assets/: Collect Pane Support Bundle.cmd  Collect Pane Support Bundle.ps1  Install Pane Shortcuts.cmd  Install Pane Shortcuts.ps1  Launch Pane Arch.cmd  Launch Pane Arch.ps1  Open Pane Arch Terminal.cmd  Open Pane Arch Terminal.ps1  Open Pane Shared Folder.cmd  Open Pane Shared Folder.ps1  Pane Control Center.cmd  Pane Control Center.ps1
src/: app.rs  bootstrap.rs  cli.rs  error.rs  ext4.rs  gui.rs  ioapic.rs  lapic.rs  main.rs  model.rs  mptable.rs  native.rs  plan.rs  qemu.rs  rdp.rs  state.rs  virtio.rs  vmm_foundation.rs  wsl.rs
src/native/: whp_bindings.rs
ui/: index.html  main.js  style.css
